// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`catalog #1 — extending X's diagonal to a three outranks the dual-purpose block/extend move narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 14,
      "row": 8,
      "score": 4910,
    },
    {
      "col": 9,
      "row": 13,
      "score": 4910,
    },
    {
      "col": 13,
      "row": 9,
      "score": 4900,
    },
    {
      "col": 10,
      "row": 12,
      "score": 4900,
    },
    {
      "col": 13,
      "row": 10,
      "score": 190,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #2 — O's dual-purpose 12,13 competes in the soft tier, behind the urgent answers to X's three narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 15,
      "row": 7,
      "score": 500,
    },
    {
      "col": 14,
      "row": 8,
      "score": 500,
    },
    {
      "col": 13,
      "row": 12,
      "score": 5010,
    },
    {
      "col": 8,
      "row": 12,
      "score": 4910,
    },
    {
      "col": 12,
      "row": 12,
      "score": 4910,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #3 — X's diagonal four is blocked on one end; boxed-five confirms a second valid block exists narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 15,
      "row": 7,
      "score": 10000,
    },
    {
      "col": 16,
      "row": 6,
      "score": 10000,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #4 — X must answer O's open-three; the dual-purpose block outscores the pure block narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 12,
      "row": 14,
      "score": 4600,
    },
    {
      "col": 8,
      "row": 10,
      "score": 4500,
    },
    {
      "col": 7,
      "row": 9,
      "score": 0,
    },
    {
      "col": 13,
      "row": 15,
      "score": 0,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #5 — O's open four is unstoppable; desperado ranks X's own open-four makers over futile blocks narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 9,
      "score": 95000,
    },
    {
      "col": 13,
      "row": 13,
      "score": 95000,
    },
    {
      "col": 8,
      "row": 8,
      "score": 5500,
    },
    {
      "col": 14,
      "row": 14,
      "score": 5500,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #6 — X's single block (9,7) works only because it combines with X's pre-existing 15,13 to box the far end narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 7,
      "row": 9,
      "score": 100000,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #7 — X's 9,9 is the sole urgent candidate: a recognized fork (two gapped two-tier lines promoted at once) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 9,
      "score": 9820,
    },
    {
      "col": 6,
      "row": 11,
      "score": 5010,
    },
    {
      "col": 10,
      "row": 11,
      "score": 5010,
    },
    {
      "col": 8,
      "row": 11,
      "score": 5000,
    },
    {
      "col": 8,
      "row": 10,
      "score": 5000,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #8 — O's diagonal four is blocked on one end; boxed-five again gives X a second valid block narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 4,
      "row": 16,
      "score": 10000,
    },
    {
      "col": 3,
      "row": 17,
      "score": 10000,
    },
  ],
  "source": "forced",
}
`;

exports[`catalog #9 — X's 10,8 is the sole urgent candidate: a recognized fork (two clean two-tier lines promoted at once) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 8,
      "row": 10,
      "score": 9800,
    },
    {
      "col": 9,
      "row": 9,
      "score": 5110,
    },
    {
      "col": 6,
      "row": 11,
      "score": 5010,
    },
    {
      "col": 6,
      "row": 8,
      "score": 4920,
    },
    {
      "col": 10,
      "row": 12,
      "score": 4920,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #10 — same board as #7, but O to move: O must occupy X's fork point narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 9,
      "score": 0,
    },
    {
      "col": 7,
      "row": 14,
      "score": 490,
    },
    {
      "col": 7,
      "row": 15,
      "score": 490,
    },
    {
      "col": 7,
      "row": 16,
      "score": 490,
    },
    {
      "col": 6,
      "row": 14,
      "score": 490,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #11 — O must answer X's row-10 open-three; all four blocks (critical + distance) lead narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 5,
      "row": 10,
      "score": 9810,
    },
    {
      "col": 6,
      "row": 10,
      "score": 9500,
    },
    {
      "col": 10,
      "row": 10,
      "score": 4600,
    },
    {
      "col": 11,
      "row": 10,
      "score": 100,
    },
  ],
  "source": "tactical",
}
`;

exports[`catalog #12 — O's 10,9 blocks two of X's open-twos at once (soft tier, no forced/urgent threats) narrowCandidates ranked output 1`] = `
{
  "moves": [
    {
      "col": 9,
      "row": 10,
      "score": 90,
    },
    {
      "col": 12,
      "row": 7,
      "score": 490,
    },
    {
      "col": 13,
      "row": 7,
      "score": 490,
    },
    {
      "col": 14,
      "row": 7,
      "score": 490,
    },
    {
      "col": 10,
      "row": 8,
      "score": 290,
    },
  ],
  "source": "tactical",
}
`;
